# spatial-sbml

./: .gitignore  CMakeLists.txt  Doxyfile  index.html  license.txt  params.json  readme-sbml-annotation.md  readme.md
SpatialCL/: CMakeLists.txt  main.cpp
SpatialSBML/: CMakeLists.txt  astFunction.cpp  astFunction.h  boundaryFunction.cpp  boundaryFunction.h  calcFastReaction.cpp  calcFastReaction.cxx  calcPDE.cpp  calcPDE.h  checkStability.cpp  checkStability.h  datahelper.hh  freeFunction.cpp  freeFunction.h  initializeFunction.cpp  initializeFunction.h  main.cxx  mystruct.h  outputFunction.cpp  outputFunction.h  searchFunction.cpp  searchFunction.h  setInfoFunction.cpp  setInfoFunction.h  spatialsimulator.cpp  spatialsimulator.h  spatialsimulator_legacy.cxx  spatialstructs.h
SpatialUI/: CMakeLists.txt  ChooseQtVersion.cmake  ICON_SpatialUI.icns  SpatialUI.plist  concentrationpalette.cpp  concentrationpalette.h  displayitem.cpp  displayitem.h  geometryeditwidget.cpp  geometryeditwidget.h  geometryeditwidget.ui  imagelabel.cpp  imagelabel.h  main.cpp  resource.h  simulationthread.cpp  simulationthread.h  spatialUI.rc  spatialapplication.cpp  spatialapplication.h  spatialmainwidget.cpp  spatialmainwidget.h  spatialmainwidget.ui  spatialresources.qrc
SpatialUI/palettes/: black-blue.txt  black-green.txt  black-red.txt  blue-white.txt  darkpastels.txt  gold.txt
bindings/: CMakeLists.txt
bindings/csharp/: CMakeLists.txt  local.cpp  local.i
bindings/java/: CMakeLists.txt  Manifest.txt  compile-native-files.cmake  local.cpp  local.i
bindings/swig/: spatialSBML.h  spatialSBML.i
examples/: README.md  The_Brusselator.xml  The_Brusselator_300x300.xml  advection.xml  fish.xml  fish_300x300.xml  fish_big.xml  transport.xml  turing.xml  turing_300x300.xml  turing_parameters-stripe.xml  turing_parameters.xml  turing_parameters_50x50.xml  turing_parameters_tiny.xml  turing_uniform.xml
examples/bindings/: SpatialWindow.java
examples/v0.84/: README.md  The_Brusselator.xml  The_Brusselator_300x300.xml  fish_300x300.xml  fish_big.xml  no_spatial.xml  turing.xml  turing_300x300.xml  turing_parameters-stripe.xml  turing_parameters.xml  turing_parameters_50x50.xml  turing_parameters_tiny.xml  turing_uniform.xml
settings/: index.html
